added new features

--- a/layouts/adminBoilerplate.ejs
+++ b/layouts/adminBoilerplate.ejs
@@ -152,6 +152,12 @@
                 <a href="/admin/regulations">Regulations</a>
             </div>
             <div class="nav-element">
+                <a href="/admin/forms">forms</a>
+            </div>
+            <div class="nav-element">
+                <a href="/admin/templates">templates</a>
+            </div>
+            <div class="nav-element">
                 <a href="/admin/logout">Logout</a>
             </div>
         </div>
