--- a/views/faculty/showAttendance.ejs
+++ b/views/faculty/showAttendance.ejs
@@ -34,6 +34,7 @@
             </div>
         <% } %>
 
-        <a href="/faculty/attendance" class="btn btn-secondary mt-4">Back to Attendance</a>
+        <a href="/faculty/attendance?sectionId=<%= section %>" class="btn btn-secondary mt-4">Back to Attendance</a>
+    
     </div>
 </body>
